Fixed long titles not showing properly in info bug

--- a/style.css
+++ b/style.css
@@ -90,9 +90,10 @@ body {
   transition: .3s;
   position: absolute;
   width: 100%;
-  height: 0;
-  bottom: -10px;
-  padding-top: 10px;
+/*  height: 0;
+  bottom: -10px;*/
+  padding: 10px 0;
+  bottom: -30%;
 }
 
 .info > span {
@@ -100,7 +101,8 @@ body {
 }
 
 .peek {
-  height: 55px;
+  /*height: 55px;*/
+  bottom: 0;
 }
 
 #search-pagination {
